20240110 Fix qml.prod | num_reupload-1 | batch state_vector

--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -64,6 +64,9 @@
     "# Faster calculation on GPU but less precision.\n",
     "torch.set_float32_matmul_precision(\"medium\")\n",
     "\n",
+    "# See https://discuss.pennylane.ai/t/qml-prod-vs-direct-operators-product/3873\n",
+    "qml.operation.enable_new_opmath()\n",
+    "\n",
     "# QCGNN template to use\n",
     "QCGNN = module_model.QCGNN_IX"
    ]
@@ -928,7 +931,8 @@
     "        bin: int,\n",
     "        subjet_radius: float,\n",
     "        num_bin_data: int,\n",
-    "        max_num_ptcs: int\n",
+    "        max_num_ptcs: int,\n",
+    "        pt_threshold: float,\n",
     "    ):\n",
     "    \"\"\"Generate a dictionary of data configurations\n",
     "    \n",
@@ -951,6 +955,8 @@
     "            Number of data that uniformly generated in each bin.\n",
     "        max_num_ptcs : int\n",
     "            Maximum number of particles in each jet.\n",
+    "        pt_threshold : int\n",
+    "            Ratio of particle pt / jet pt.\n",
     "\n",
     "    Returns:\n",
     "        dict : Dictionary of data configurations.\n",
@@ -965,10 +971,11 @@
     "        \"bin\": bin,\n",
     "        \"num_bin_data\": num_bin_data,\n",
     "        \"max_num_ptcs\": max_num_ptcs,\n",
+    "        \"pt_threshold\": pt_threshold,\n",
     "    }\n",
     "    data_config[\"data_suffix\"] = (\n",
-    "        f\"{abbrev}_cut({cut_pt[0]},{cut_pt[1]})_ptc{max_num_ptcs}_bin{bin}\"\n",
-    "        f\"-{num_bin_data}_R{subjet_radius}\"\n",
+    "        f\"{abbrev}_ptc{max_num_ptcs}_thres{pt_threshold}\"\n",
+    "        f\"-nb{num_bin_data}_R{subjet_radius}\"\n",
     "    )\n",
     "\n",
     "    return data_config\n",
@@ -977,17 +984,19 @@
     "    # 2-prong v.s. 1-prong.\n",
     "    generate_data_config(\n",
     "        sig=\"VzToZhToVevebb\", bkg=\"VzToQCD\", abbrev=\"BB-QCD\",\n",
-    "        cut_pt=(800, 1000), subjet_radius=0, \n",
-    "        bin=10, num_bin_data=general_config[\"num_bin_data\"],\n",
+    "        cut_pt=(800, 1000), subjet_radius=0, bin=10,\n",
+    "        num_bin_data=general_config[\"num_bin_data\"],\n",
     "        max_num_ptcs=general_config[\"max_num_ptcs\"],\n",
+    "        pt_threshold=general_config[\"pt_threshold\"],\n",
     "    ),\n",
     "    \n",
     "    # 3-prong v.s. 1-prong.\n",
     "    generate_data_config(\n",
     "        sig=\"VzToTt\", bkg=\"VzToQCD\", abbrev=\"TT-QCD\",\n",
-    "        cut_pt=(800, 1000), subjet_radius=0, \n",
-    "        bin=10, num_bin_data=general_config[\"num_bin_data\"],\n",
+    "        cut_pt=(800, 1000), subjet_radius=0, bin=10,\n",
+    "        num_bin_data=general_config[\"num_bin_data\"],\n",
     "        max_num_ptcs=general_config[\"max_num_ptcs\"],\n",
+    "        pt_threshold=general_config[\"pt_threshold\"],\n",
     "    ),\n",
     "]"
    ]
@@ -1006,7 +1015,7 @@
    "outputs": [],
    "source": [
     "# Uncomment the model you want to train.\n",
-    "for data_config, rnd_seed in product(data_config_list, range(10)):\n",
+    "for data_config, rnd_seed in product(data_config_list, range(3)):\n",
     "    general_config[\"rnd_seed\"] = rnd_seed\n",
     "    \n",
     "    # # Classical MPGNN with hidden neurons {3, 6, 9} and 2 layers.\n",
