--- a/demo_compare_enc.ipynb
+++ b/demo_compare_enc.ipynb
@@ -6,18 +6,17 @@
    "source": [
     "### About this demo\n",
     "\n",
-    "This demo shows the equivalence of `pennylane_encoding` and `qiskit_encoding` in main script, and the equivalence of `QCGNN_IX` and `QCGNN_0`."
+    "This demo shows the equivalence of `pennylane_encoding` and `qiskit_encoding` in main script, and the equivalence of `QCGNN_IX` and `QCGNN_H`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import lightning as L\n",
     "import module_model\n",
-    "from pennylane import numpy as np\n",
     "import torch\n",
     "\n",
     "import g_main"
@@ -25,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +57,9 @@
       "Global seed set to 0\n",
       "Global seed set to 0\n",
       "Global seed set to 0\n",
-      "Global seed set to 0\n"
+      "Global seed set to 0\n",
+      "/home/yianchen/.pyenv/versions/3.9.12/lib/python3.9/site-packages/pennylane/math/utils.py:227: UserWarning: Contains tensors of types {'autograd', 'torch'}; dispatch will prioritize TensorFlow, PyTorch, and  Jax over Autograd. Consider replacing Autograd with vanilla NumPy.\n",
+      "  warnings.warn(\n"
      ]
     },
     {
@@ -83,8 +84,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/yianchen/.pyenv/versions/3.9.12/lib/python3.9/site-packages/pennylane/math/utils.py:227: UserWarning: Contains tensors of types {'torch', 'autograd'}; dispatch will prioritize TensorFlow, PyTorch, and  Jax over Autograd. Consider replacing Autograd with vanilla NumPy.\n",
-      "  warnings.warn(\n",
       "Global seed set to 1\n",
       "Global seed set to 1\n",
       "Global seed set to 1\n",
@@ -97,11 +96,27 @@
      "text": [
       "\n",
       "Result running with PennyLane encoding:\n",
-      " - QCGNN_IX -> tensor([-21.1515,   0.1108], grad_fn=<ViewBackward0>)\n",
-      " - QCGNN_0  -> tensor([-21.1515,   0.1108], grad_fn=<ViewBackward0>)\n",
+      " - QCGNN_IX -> tensor([[-21.1515,   0.1108],\n",
+      "        [-23.1519,  -3.5357],\n",
+      "        [-22.2938,   2.0686],\n",
+      "        [-21.3229,   0.5693],\n",
+      "        [-21.9178,   0.6399]], grad_fn=<MulBackward0>)\n",
+      " - QCGNN_H  -> tensor([[-21.1515,   0.1108],\n",
+      "        [-23.1519,  -3.5357],\n",
+      "        [-22.2938,   2.0686],\n",
+      "        [-21.3229,   0.5693],\n",
+      "        [-21.9178,   0.6399]], grad_fn=<MulBackward0>)\n",
       "Result running with Qiskit encoding:\n",
-      " - QCGNN_IX -> tensor([-21.1515,   0.1108], grad_fn=<ViewBackward0>)\n",
-      " - QCGNN_0  -> tensor([-21.1515,   0.1108], grad_fn=<ViewBackward0>)\n",
+      " - QCGNN_IX -> tensor([[-21.1515,   0.1108],\n",
+      "        [-23.1519,  -3.5357],\n",
+      "        [-22.2938,   2.0686],\n",
+      "        [-21.3229,   0.5693],\n",
+      "        [-21.9178,   0.6399]], grad_fn=<MulBackward0>)\n",
+      " - QCGNN_H  -> tensor([[-21.1515,   0.1108],\n",
+      "        [-23.1519,  -3.5357],\n",
+      "        [-22.2938,   2.0686],\n",
+      "        [-21.3229,   0.5693],\n",
+      "        [-21.9177,   0.6399]], grad_fn=<MulBackward0>)\n",
       "\n",
       "----------------------------------------------------------------------------------------------------\n",
       "\n",
@@ -135,277 +150,27 @@
      "text": [
       "\n",
       "Result running with PennyLane encoding:\n",
-      " - QCGNN_IX -> tensor([-26.6354, -27.7502], grad_fn=<ViewBackward0>)\n",
-      " - QCGNN_0  -> tensor([-26.6354, -27.7502], grad_fn=<ViewBackward0>)\n",
+      " - QCGNN_IX -> tensor([[-35.3599, -38.2878],\n",
+      "        [-38.1271, -40.7565],\n",
+      "        [-34.9804, -42.5494],\n",
+      "        [-47.1490, -45.1205],\n",
+      "        [-36.2427, -38.8393]], grad_fn=<MulBackward0>)\n",
+      " - QCGNN_H  -> tensor([[-35.3599, -38.2878],\n",
+      "        [-38.1271, -40.7565],\n",
+      "        [-34.9804, -42.5494],\n",
+      "        [-47.1490, -45.1205],\n",
+      "        [-36.2427, -38.8393]], grad_fn=<MulBackward0>)\n",
       "Result running with Qiskit encoding:\n",
-      " - QCGNN_IX -> tensor([-26.6354, -27.7502], grad_fn=<ViewBackward0>)\n",
-      " - QCGNN_0  -> tensor([-26.6354, -27.7502], grad_fn=<ViewBackward0>)\n",
-      "\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = pennylane\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 0, 2)\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = pennylane\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 0, 2)\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Global seed set to 3\n",
-      "Global seed set to 3\n",
-      "Global seed set to 3\n",
-      "Global seed set to 3\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Result running with PennyLane encoding:\n",
-      " - QCGNN_IX -> tensor([ 2.3728, 22.1480], grad_fn=<ViewBackward0>)\n",
-      " - QCGNN_0  -> tensor([ 2.3728, 22.1480], grad_fn=<ViewBackward0>)\n",
-      "Result running with Qiskit encoding:\n",
-      " - QCGNN_IX -> tensor([ 2.3728, 22.1480], grad_fn=<ViewBackward0>)\n",
-      " - QCGNN_0  -> tensor([ 2.3728, 22.1480], grad_fn=<ViewBackward0>)\n",
-      "\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = pennylane\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 0, 2)\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = pennylane\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 0, 2)\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Global seed set to 4\n",
-      "Global seed set to 4\n",
-      "Global seed set to 4\n",
-      "Global seed set to 4\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Result running with PennyLane encoding:\n",
-      " - QCGNN_IX -> tensor([4.5818, 2.2665], grad_fn=<ViewBackward0>)\n",
-      " - QCGNN_0  -> tensor([4.5818, 2.2665], grad_fn=<ViewBackward0>)\n",
-      "Result running with Qiskit encoding:\n",
-      " - QCGNN_IX -> tensor([4.5818, 2.2665], grad_fn=<ViewBackward0>)\n",
-      " - QCGNN_0  -> tensor([4.5818, 2.2665], grad_fn=<ViewBackward0>)\n",
-      "\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = pennylane\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 0, 2)\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = pennylane\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 0, 2)\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Global seed set to 5\n",
-      "Global seed set to 5\n",
-      "Global seed set to 5\n",
-      "Global seed set to 5\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Result running with PennyLane encoding:\n",
-      " - QCGNN_IX -> tensor([-34.3187,  20.2769], grad_fn=<ViewBackward0>)\n",
-      " - QCGNN_0  -> tensor([-34.3187,  20.2769], grad_fn=<ViewBackward0>)\n",
-      "Result running with Qiskit encoding:\n",
-      " - QCGNN_IX -> tensor([-34.3187,  20.2769], grad_fn=<ViewBackward0>)\n",
-      " - QCGNN_0  -> tensor([-34.3187,  20.2769], grad_fn=<ViewBackward0>)\n",
-      "\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = pennylane\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 0, 2)\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = pennylane\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 0, 2)\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Global seed set to 6\n",
-      "Global seed set to 6\n",
-      "Global seed set to 6\n",
-      "Global seed set to 6\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Result running with PennyLane encoding:\n",
-      " - QCGNN_IX -> tensor([-15.1577,  10.6932], grad_fn=<ViewBackward0>)\n",
-      " - QCGNN_0  -> tensor([-15.1577,  10.6932], grad_fn=<ViewBackward0>)\n",
-      "Result running with Qiskit encoding:\n",
-      " - QCGNN_IX -> tensor([-15.1577,  10.6932], grad_fn=<ViewBackward0>)\n",
-      " - QCGNN_0  -> tensor([-15.1578,  10.6932], grad_fn=<ViewBackward0>)\n",
-      "\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = pennylane\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 0, 2)\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = pennylane\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 0, 2)\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Global seed set to 7\n",
-      "Global seed set to 7\n",
-      "Global seed set to 7\n",
-      "Global seed set to 7\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Result running with PennyLane encoding:\n",
-      " - QCGNN_IX -> tensor([-4.9720, 14.3686], grad_fn=<ViewBackward0>)\n",
-      " - QCGNN_0  -> tensor([-4.9720, 14.3686], grad_fn=<ViewBackward0>)\n",
-      "Result running with Qiskit encoding:\n",
-      " - QCGNN_IX -> tensor([-4.9720, 14.3686], grad_fn=<ViewBackward0>)\n",
-      " - QCGNN_0  -> tensor([-4.9720, 14.3686], grad_fn=<ViewBackward0>)\n",
-      "\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = pennylane\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 0, 2)\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = pennylane\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 0, 2)\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Global seed set to 8\n",
-      "Global seed set to 8\n",
-      "Global seed set to 8\n",
-      "Global seed set to 8\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Result running with PennyLane encoding:\n",
-      " - QCGNN_IX -> tensor([-12.9816,   3.6373], grad_fn=<ViewBackward0>)\n",
-      " - QCGNN_0  -> tensor([-12.9816,   3.6373], grad_fn=<ViewBackward0>)\n",
-      "Result running with Qiskit encoding:\n",
-      " - QCGNN_IX -> tensor([-12.9816,   3.6373], grad_fn=<ViewBackward0>)\n",
-      " - QCGNN_0  -> tensor([-12.9816,   3.6373], grad_fn=<ViewBackward0>)\n",
-      "\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = pennylane\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 0, 2)\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = pennylane\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 0, 2)\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Global seed set to 9\n",
-      "Global seed set to 9\n",
-      "Global seed set to 9\n",
-      "Global seed set to 9\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Result running with PennyLane encoding:\n",
-      " - QCGNN_IX -> tensor([-3.5016, 21.1190], grad_fn=<ViewBackward0>)\n",
-      " - QCGNN_0  -> tensor([-3.5016, 21.1190], grad_fn=<ViewBackward0>)\n",
-      "Result running with Qiskit encoding:\n",
-      " - QCGNN_IX -> tensor([-3.5016, 21.1190], grad_fn=<ViewBackward0>)\n",
-      " - QCGNN_0  -> tensor([-3.5016, 21.1190], grad_fn=<ViewBackward0>)\n",
+      " - QCGNN_IX -> tensor([[-35.3599, -38.2878],\n",
+      "        [-38.1271, -40.7565],\n",
+      "        [-34.9804, -42.5494],\n",
+      "        [-47.1490, -45.1205],\n",
+      "        [-36.2427, -38.8393]], grad_fn=<MulBackward0>)\n",
+      " - QCGNN_H  -> tensor([[-35.3599, -38.2878],\n",
+      "        [-38.1271, -40.7565],\n",
+      "        [-34.9804, -42.5494],\n",
+      "        [-47.1490, -45.1205],\n",
+      "        [-36.2427, -38.8393]], grad_fn=<MulBackward0>)\n",
       "\n",
       "----------------------------------------------------------------------------------------------------\n",
       "\n",
@@ -423,11 +188,27 @@
       "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n",
       "\n",
       "Result running with PennyLane encoding:\n",
-      " - QCGNN_IX -> tensor([16.0632, 14.4282], grad_fn=<ViewBackward0>)\n",
-      " - QCGNN_0  -> tensor([16.0632, 14.4282], grad_fn=<ViewBackward0>)\n",
+      " - QCGNN_IX -> tensor([[ 2.1454, 28.6473],\n",
+      "        [-2.3126, 23.9919],\n",
+      "        [-4.7432, 27.8033],\n",
+      "        [ 2.4819, 25.3027],\n",
+      "        [ 0.4674, 24.2709]], grad_fn=<MulBackward0>)\n",
+      " - QCGNN_H  -> tensor([[ 2.1454, 28.6473],\n",
+      "        [-2.3126, 23.9919],\n",
+      "        [-4.7432, 27.8033],\n",
+      "        [ 2.4819, 25.3027],\n",
+      "        [ 0.4674, 24.2709]], grad_fn=<MulBackward0>)\n",
       "Result running with Qiskit encoding:\n",
-      " - QCGNN_IX -> tensor([16.0632, 14.4282], grad_fn=<ViewBackward0>)\n",
-      " - QCGNN_0  -> tensor([16.0632, 14.4282], grad_fn=<ViewBackward0>)\n",
+      " - QCGNN_IX -> tensor([[ 2.1454, 28.6473],\n",
+      "        [-2.3126, 23.9919],\n",
+      "        [-4.7432, 27.8033],\n",
+      "        [ 2.4819, 25.3027],\n",
+      "        [ 0.4674, 24.2709]], grad_fn=<MulBackward0>)\n",
+      " - QCGNN_H  -> tensor([[ 2.1454, 28.6473],\n",
+      "        [-2.3126, 23.9919],\n",
+      "        [-4.7432, 27.8033],\n",
+      "        [ 2.4819, 25.3027],\n",
+      "        [ 0.4674, 24.2709]], grad_fn=<MulBackward0>)\n",
       "\n",
       "----------------------------------------------------------------------------------------------------\n",
       "\n"
@@ -435,6 +216,7 @@
     }
    ],
    "source": [
+    "num_batch = 5\n",
     "num_ir_qubits = 3 # Number of qubits in IR.\n",
     "num_nr_qubits = 2 # Number of qubits in NR.\n",
     "\n",
@@ -460,7 +242,7 @@
     "        num_nr_qubits=num_nr_qubits,\n",
     "        backend=backend\n",
     "    )\n",
-    "    return module_model.QCGNN_0(\n",
+    "    return module_model.QCGNN_H(\n",
     "        num_ir_qubits=num_ir_qubits,\n",
     "        num_nr_qubits=num_nr_qubits,\n",
     "        num_layers=1,\n",
@@ -470,7 +252,7 @@
     "        qbackend=backend\n",
     "    )\n",
     "\n",
-    "for rnd_seed in range(10):\n",
+    "for rnd_seed in range(3):\n",
     "    L.seed_everything(rnd_seed) # For reproducing weights initialization.\n",
     "    pennylane_circuit_IX = circuit_IX(\"pennylane\")\n",
     "    \n",
@@ -483,22 +265,22 @@
     "    L.seed_everything(rnd_seed) # For reproducing weights initialization.\n",
     "    qiskit_circuit_0 = circuit_0(\"qiskit\")\n",
     "\n",
-    "    num_ptcs = np.random.randint(2**num_ir_qubits) + 1\n",
-    "    x = torch.rand(num_ptcs, 3)\n",
+    "    num_ptcs = 8\n",
+    "    x = torch.rand(num_batch, num_ptcs, 3)\n",
     "\n",
-    "    y_pennylane_IX = pennylane_circuit_IX(x).reshape(-1)\n",
-    "    y_pennylane_0 = pennylane_circuit_0(x).reshape(-1)\n",
-    "    y_qiskit_IX = qiskit_circuit_IX(x).reshape(-1)\n",
-    "    y_qiskit_0 = qiskit_circuit_0(x).reshape(-1)\n",
+    "    y_pennylane_IX = pennylane_circuit_IX(x)\n",
+    "    y_pennylane_0 = pennylane_circuit_0(x)\n",
+    "    y_qiskit_IX = qiskit_circuit_IX(x)\n",
+    "    y_qiskit_0 = qiskit_circuit_0(x)\n",
     "\n",
     "    print()\n",
     "    print(f\"Result running with PennyLane encoding:\")\n",
     "    print(f\" - QCGNN_IX -> {y_pennylane_IX}\")\n",
-    "    print(f\" - QCGNN_0  -> {y_pennylane_0}\")\n",
+    "    print(f\" - QCGNN_H  -> {y_pennylane_0}\")\n",
     "\n",
     "    print(f\"Result running with Qiskit encoding:\")\n",
     "    print(f\" - QCGNN_IX -> {y_qiskit_IX}\")\n",
-    "    print(f\" - QCGNN_0  -> {y_qiskit_0}\")\n",
+    "    print(f\" - QCGNN_H  -> {y_qiskit_0}\")\n",
     "    \n",
     "    print(f\"\\n{'-'*100}\\n\")"
    ]
