20240111 Add aggregation options | Remove QCGNN scale

--- a/demo_fastjet.ipynb
+++ b/demo_fastjet.ipynb
@@ -45,14 +45,32 @@
      "output_type": "stream",
      "text": [
       "# DataLog: Load VzToQCD c800_1000_r0 hdf5 file with 80323 events.\n",
+      "# DataLog: After preprocessing, remaining num_events = 79510\n",
+      "----------------------------------------------------------------------------------------------------\n",
       "# DataLog: Load VzToQCD c800_1000_r0.05 hdf5 file with 80323 events.\n",
+      "# DataLog: After preprocessing, remaining num_events = 38515\n",
+      "----------------------------------------------------------------------------------------------------\n",
       "# DataLog: Load VzToQCD c800_1000_r0.1 hdf5 file with 80323 events.\n",
+      "# DataLog: After preprocessing, remaining num_events = 32886\n",
+      "----------------------------------------------------------------------------------------------------\n",
       "# DataLog: Load VzToZhToVevebb c800_1000_r0 hdf5 file with 107039 events.\n",
+      "# DataLog: After preprocessing, remaining num_events = 106040\n",
+      "----------------------------------------------------------------------------------------------------\n",
       "# DataLog: Load VzToZhToVevebb c800_1000_r0.05 hdf5 file with 107039 events.\n",
+      "# DataLog: After preprocessing, remaining num_events = 93454\n",
+      "----------------------------------------------------------------------------------------------------\n",
       "# DataLog: Load VzToZhToVevebb c800_1000_r0.1 hdf5 file with 107039 events.\n",
+      "# DataLog: After preprocessing, remaining num_events = 94729\n",
+      "----------------------------------------------------------------------------------------------------\n",
       "# DataLog: Load VzToTt c800_1000_r0 hdf5 file with 81694 events.\n",
+      "# DataLog: After preprocessing, remaining num_events = 80032\n",
+      "----------------------------------------------------------------------------------------------------\n",
       "# DataLog: Load VzToTt c800_1000_r0.05 hdf5 file with 81694 events.\n",
-      "# DataLog: Load VzToTt c800_1000_r0.1 hdf5 file with 81694 events.\n"
+      "# DataLog: After preprocessing, remaining num_events = 80086\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "# DataLog: Load VzToTt c800_1000_r0.1 hdf5 file with 81694 events.\n",
+      "# DataLog: After preprocessing, remaining num_events = 80527\n",
+      "----------------------------------------------------------------------------------------------------\n"
      ]
     }
    ],
@@ -69,7 +87,8 @@
     "        max_num_ptcs=\"Full\",\n",
     "        pt_threshold=0.05,\n",
     "    )\n",
-    "    fatjet_events_dict[channel].append(fatjet_events)"
+    "    fatjet_events_dict[channel].append(fatjet_events)\n",
+    "    print(100 * \"-\")"
    ]
   },
   {
