--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -164,7 +164,7 @@
    "outputs": [],
    "source": [
     "class MessagePassing(MessagePassing):\n",
-    "    def __init__(self, phi):\n",
+    "    def __init__(self, phi, aggr):\n",
     "        \"\"\"Undirected message passing model.\n",
     "        \n",
     "        Args:\n",
@@ -173,7 +173,7 @@
     "                for futher details.\n",
     "        \"\"\"\n",
     "\n",
-    "        super().__init__(aggr=\"add\", flow=\"target_to_source\")\n",
+    "        super().__init__(aggr=aggr, flow=\"target_to_source\")\n",
     "        self.phi = phi\n",
     "    \n",
     "    def forward(self, x, edge_index):\n",
@@ -187,7 +187,7 @@
     "\n",
     "\n",
     "class GraphMPGNN(nn.Module):\n",
-    "    def __init__(self, phi, mlp):\n",
+    "    def __init__(self, phi, mlp, aggr):\n",
     "        \"\"\"MPGNN with SUM as the aggregation function.\n",
     "        \n",
     "        Instead of combining this part with the class `ClassicalMPGNN` \n",
@@ -203,7 +203,8 @@
     "        \"\"\"\n",
     "\n",
     "        super().__init__()\n",
-    "        self.gnn = MessagePassing(phi)\n",
+    "        self.aggr = aggr\n",
+    "        self.gnn = MessagePassing(phi, aggr)\n",
     "        self.mlp = mlp\n",
     "\n",
     "    def forward(self, x, edge_index, batch):\n",
@@ -211,7 +212,10 @@
     "        x = self.gnn(x, edge_index)\n",
     "\n",
     "        # Graph aggregation.\n",
-    "        x = torch_geometric.nn.global_add_pool(x, batch)\n",
+    "        if self.aggr == \"add\":\n",
+    "            x = torch_geometric.nn.global_add_pool(x, batch)\n",
+    "        elif self.aggr == \"mean\":\n",
+    "            x = x = torch_geometric.nn.global_mean_pool(x, batch)\n",
     "\n",
     "        # Shallow linear model.\n",
     "        x = self.mlp(x)\n",
@@ -226,6 +230,7 @@
     "            gnn_out: int,\n",
     "            gnn_hidden: int,\n",
     "            gnn_layers: int,\n",
+    "            aggregation: str,\n",
     "            mlp_hidden:int = 0,\n",
     "            mlp_layers:int = 0,\n",
     "            **kwargs\n",
@@ -274,7 +279,7 @@
     "            num_layers=mlp_layers\n",
     "            )\n",
     "\n",
-    "        super().__init__(phi, mlp)"
+    "        super().__init__(phi, mlp, aggr=aggregation)"
    ]
   },
   {
@@ -418,6 +423,7 @@
     "            num_layers: int,\n",
     "            num_reupload: int,\n",
     "            quantum_config: dict,\n",
+    "            aggregation: str,\n",
     "    ):\n",
     "        \n",
     "        super().__init__()\n",
@@ -440,6 +446,7 @@
     "            num_layers=num_layers,\n",
     "            num_reupload=num_reupload,\n",
     "            ctrl_enc=ctrl_enc,\n",
+    "            aggregation=aggregation,\n",
     "            **quantum_config\n",
     "            )\n",
     "        self.mlp = module_model.ClassicalMLP(\n",
@@ -628,7 +635,7 @@
     "\n",
     "    # Additional model information (used for wandb filter).\n",
     "    model_config[\"model_name\"] = model.__class__.__name__\n",
-    "    model_config[\"group_rnd\"] = f\"{model_config['base_model']}_{model_config['model_suffix']}-{data_config['data_suffix']}\"\n",
+    "    model_config[\"group_rnd\"] = f\"{model_config['base_model']}_{model_config['model_suffix']}_{model_config['aggregation']}-{data_config['data_suffix']}\"\n",
     "    model_config[\"group_rnd_full\"] = f\"{model_config['model_name']}-{model_config['group_rnd']}\"\n",
     "\n",
     "    # Monitor (either CSVLogger or WandbLogger) configuration and setup.\n",
@@ -780,11 +787,17 @@
     "    \n",
     "    # Suffix used for wandb filter and training result.\n",
     "    model_suffix = f\"go{go}_gh{gh}_gl{gl}_mh0_ml0\"\n",
+    "\n",
+    "    # Determine the aggregation function\n",
+    "    if general_config[\"aggregation\"] == \"SUM\":\n",
+    "        aggregation = \"add\"\n",
+    "    elif general_config[\"aggregation\"] == \"MEAN\":\n",
+    "        aggregation = \"mean\"\n",
     "    \n",
     "    # Configurations for constructing MPGNN.\n",
     "    model_config = {\n",
     "        \"gnn_in\": 6, \"gnn_out\": go, \"gnn_hidden\": gh, \"gnn_layers\": gl,\n",
-    "        \"mlp_hidden\": 0, \"mlp_layers\": 0,\n",
+    "        \"mlp_hidden\": 0, \"mlp_layers\": 0, \"aggregation\": aggregation,\n",
     "        \"lr\": lr, \"model_suffix\": model_suffix,\n",
     "        \"base_model\": module_model.ClassicalMLP.__name__,\n",
     "    }\n",
@@ -872,13 +885,15 @@
     "        \"lr\": lr,\n",
     "        \"model_suffix\": model_suffix,\n",
     "        \"base_model\": QCGNN.__name__,\n",
+    "        \"aggregation\": general_config[\"aggregation\"],\n",
     "    }\n",
     "    model = QuantumRotQCGNN(\n",
     "        num_ir_qubits=qidx,\n",
     "        num_nr_qubits=qnn,\n",
     "        num_layers=gl,\n",
     "        num_reupload=gr,\n",
-    "        quantum_config=quantum_config\n",
+    "        quantum_config=quantum_config,\n",
+    "        aggregation=general_config[\"aggregation\"],\n",
     "    )\n",
     "    \n",
     "    # Execute training for quantum models.\n",
@@ -1015,7 +1030,7 @@
    "outputs": [],
    "source": [
     "# Uncomment the model you want to train.\n",
-    "for data_config, rnd_seed in product(data_config_list, range(3)):\n",
+    "for data_config, rnd_seed in product(data_config_list, range(1)):\n",
     "    general_config[\"rnd_seed\"] = rnd_seed\n",
     "    \n",
     "    # # Classical MPGNN with hidden neurons {3, 6, 9} and 2 layers.\n",
