20240111 Add `keep_dim` for SUM

--- a/demo_compare_enc.ipynb
+++ b/demo_compare_enc.ipynb
@@ -58,7 +58,7 @@
       "Global seed set to 0\n",
       "Global seed set to 0\n",
       "Global seed set to 0\n",
-      "/home/yianchen/.pyenv/versions/3.9.12/lib/python3.9/site-packages/pennylane/math/utils.py:227: UserWarning: Contains tensors of types {'autograd', 'torch'}; dispatch will prioritize TensorFlow, PyTorch, and  Jax over Autograd. Consider replacing Autograd with vanilla NumPy.\n",
+      "/home/yianchen/.pyenv/versions/3.9.12/lib/python3.9/site-packages/pennylane/math/utils.py:227: UserWarning: Contains tensors of types {'torch', 'autograd'}; dispatch will prioritize TensorFlow, PyTorch, and  Jax over Autograd. Consider replacing Autograd with vanilla NumPy.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -77,7 +77,10 @@
       "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n",
       "# ModelLog: Quantum device  = default.qubit\n",
       "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n"
+      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n",
+      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n"
      ]
     },
     {
@@ -94,29 +97,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
       "\n",
       "Result running with PennyLane encoding:\n",
-      " - QCGNN_IX -> tensor([[-21.1515,   0.1108],\n",
-      "        [-23.1519,  -3.5357],\n",
-      "        [-22.2938,   2.0686],\n",
-      "        [-21.3229,   0.5693],\n",
-      "        [-21.9178,   0.6399]], grad_fn=<MulBackward0>)\n",
-      " - QCGNN_H  -> tensor([[-21.1515,   0.1108],\n",
-      "        [-23.1519,  -3.5357],\n",
-      "        [-22.2938,   2.0686],\n",
-      "        [-21.3229,   0.5693],\n",
-      "        [-21.9178,   0.6399]], grad_fn=<MulBackward0>)\n",
+      " - QCGNN_IX -> tensor([[22.9829, -8.5701],\n",
+      "        [20.2260, -7.4208],\n",
+      "        [23.9529, -9.1068],\n",
+      "        [17.4877, -7.8911],\n",
+      "        [ 9.9112, -5.9425]], grad_fn=<MulBackward0>)\n",
+      " - QCGNN_H  -> tensor([[22.9829, -8.5701],\n",
+      "        [20.2260, -7.4208],\n",
+      "        [23.9529, -9.1068],\n",
+      "        [17.4877, -7.8911],\n",
+      "        [ 9.9112, -5.9425]], grad_fn=<MulBackward0>)\n",
       "Result running with Qiskit encoding:\n",
-      " - QCGNN_IX -> tensor([[-21.1515,   0.1108],\n",
-      "        [-23.1519,  -3.5357],\n",
-      "        [-22.2938,   2.0686],\n",
-      "        [-21.3229,   0.5693],\n",
-      "        [-21.9178,   0.6399]], grad_fn=<MulBackward0>)\n",
-      " - QCGNN_H  -> tensor([[-21.1515,   0.1108],\n",
-      "        [-23.1519,  -3.5357],\n",
-      "        [-22.2938,   2.0686],\n",
-      "        [-21.3229,   0.5693],\n",
-      "        [-21.9177,   0.6399]], grad_fn=<MulBackward0>)\n",
+      " - QCGNN_IX -> tensor([[22.9829, -8.5701],\n",
+      "        [20.2260, -7.4208],\n",
+      "        [23.9529, -9.1068],\n",
+      "        [17.4877, -7.8911],\n",
+      "        [ 9.9112, -5.9425]], grad_fn=<MulBackward0>)\n",
+      " - QCGNN_H  -> tensor([[22.9829, -8.5701],\n",
+      "        [20.2260, -7.4208],\n",
+      "        [23.9529, -9.1068],\n",
+      "        [17.4877, -7.8911],\n",
+      "        [ 9.9112, -5.9425]], grad_fn=<MulBackward0>)\n",
       "\n",
       "----------------------------------------------------------------------------------------------------\n",
       "\n",
@@ -131,7 +135,10 @@
       "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n",
       "# ModelLog: Quantum device  = default.qubit\n",
       "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n"
+      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n",
+      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n"
      ]
     },
     {
@@ -148,29 +155,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
       "\n",
       "Result running with PennyLane encoding:\n",
-      " - QCGNN_IX -> tensor([[-35.3599, -38.2878],\n",
-      "        [-38.1271, -40.7565],\n",
-      "        [-34.9804, -42.5494],\n",
-      "        [-47.1490, -45.1205],\n",
-      "        [-36.2427, -38.8393]], grad_fn=<MulBackward0>)\n",
-      " - QCGNN_H  -> tensor([[-35.3599, -38.2878],\n",
-      "        [-38.1271, -40.7565],\n",
-      "        [-34.9804, -42.5494],\n",
-      "        [-47.1490, -45.1205],\n",
-      "        [-36.2427, -38.8393]], grad_fn=<MulBackward0>)\n",
+      " - QCGNN_IX -> tensor([[-34.0478,  24.1022],\n",
+      "        [-30.3813,  23.4906],\n",
+      "        [-30.3001,  23.8721],\n",
+      "        [-31.3274,  19.0822],\n",
+      "        [-27.2439,  22.2931]], grad_fn=<MulBackward0>)\n",
+      " - QCGNN_H  -> tensor([[-34.0478,  24.1022],\n",
+      "        [-30.3813,  23.4906],\n",
+      "        [-30.3001,  23.8721],\n",
+      "        [-31.3274,  19.0822],\n",
+      "        [-27.2439,  22.2931]], grad_fn=<MulBackward0>)\n",
       "Result running with Qiskit encoding:\n",
-      " - QCGNN_IX -> tensor([[-35.3599, -38.2878],\n",
-      "        [-38.1271, -40.7565],\n",
-      "        [-34.9804, -42.5494],\n",
-      "        [-47.1490, -45.1205],\n",
-      "        [-36.2427, -38.8393]], grad_fn=<MulBackward0>)\n",
-      " - QCGNN_H  -> tensor([[-35.3599, -38.2878],\n",
-      "        [-38.1271, -40.7565],\n",
-      "        [-34.9804, -42.5494],\n",
-      "        [-47.1490, -45.1205],\n",
-      "        [-36.2427, -38.8393]], grad_fn=<MulBackward0>)\n",
+      " - QCGNN_IX -> tensor([[-34.0478,  24.1022],\n",
+      "        [-30.3813,  23.4906],\n",
+      "        [-30.3001,  23.8721],\n",
+      "        [-31.3274,  19.0822],\n",
+      "        [-27.2439,  22.2931]], grad_fn=<MulBackward0>)\n",
+      " - QCGNN_H  -> tensor([[-34.0478,  24.1022],\n",
+      "        [-30.3813,  23.4906],\n",
+      "        [-30.3001,  23.8721],\n",
+      "        [-31.3274,  19.0822],\n",
+      "        [-27.2439,  22.2931]], grad_fn=<MulBackward0>)\n",
       "\n",
       "----------------------------------------------------------------------------------------------------\n",
       "\n",
@@ -186,29 +194,33 @@
       "# ModelLog: Quantum device  = default.qubit\n",
       "# ModelLog: Quantum backend = qiskit\n",
       "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n",
+      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
       "\n",
       "Result running with PennyLane encoding:\n",
-      " - QCGNN_IX -> tensor([[ 2.1454, 28.6473],\n",
-      "        [-2.3126, 23.9919],\n",
-      "        [-4.7432, 27.8033],\n",
-      "        [ 2.4819, 25.3027],\n",
-      "        [ 0.4674, 24.2709]], grad_fn=<MulBackward0>)\n",
-      " - QCGNN_H  -> tensor([[ 2.1454, 28.6473],\n",
-      "        [-2.3126, 23.9919],\n",
-      "        [-4.7432, 27.8033],\n",
-      "        [ 2.4819, 25.3027],\n",
-      "        [ 0.4674, 24.2709]], grad_fn=<MulBackward0>)\n",
+      " - QCGNN_IX -> tensor([[-31.3434,  -4.7741],\n",
+      "        [-22.8819,  -7.4708],\n",
+      "        [-23.5987,  -8.8874],\n",
+      "        [-34.7616, -13.4063],\n",
+      "        [-21.6412,  -1.2326]], grad_fn=<MulBackward0>)\n",
+      " - QCGNN_H  -> tensor([[-31.3434,  -4.7741],\n",
+      "        [-22.8819,  -7.4708],\n",
+      "        [-23.5987,  -8.8874],\n",
+      "        [-34.7616, -13.4063],\n",
+      "        [-21.6412,  -1.2326]], grad_fn=<MulBackward0>)\n",
       "Result running with Qiskit encoding:\n",
-      " - QCGNN_IX -> tensor([[ 2.1454, 28.6473],\n",
-      "        [-2.3126, 23.9919],\n",
-      "        [-4.7432, 27.8033],\n",
-      "        [ 2.4819, 25.3027],\n",
-      "        [ 0.4674, 24.2709]], grad_fn=<MulBackward0>)\n",
-      " - QCGNN_H  -> tensor([[ 2.1454, 28.6473],\n",
-      "        [-2.3126, 23.9919],\n",
-      "        [-4.7432, 27.8033],\n",
-      "        [ 2.4819, 25.3027],\n",
-      "        [ 0.4674, 24.2709]], grad_fn=<MulBackward0>)\n",
+      " - QCGNN_IX -> tensor([[-31.3434,  -4.7741],\n",
+      "        [-22.8819,  -7.4708],\n",
+      "        [-23.5987,  -8.8874],\n",
+      "        [-34.7616, -13.4063],\n",
+      "        [-21.6412,  -1.2326]], grad_fn=<MulBackward0>)\n",
+      " - QCGNN_H  -> tensor([[-31.3434,  -4.7741],\n",
+      "        [-22.8819,  -7.4708],\n",
+      "        [-23.5987,  -8.8874],\n",
+      "        [-34.7616, -13.4063],\n",
+      "        [-21.6412,  -1.2326]], grad_fn=<MulBackward0>)\n",
       "\n",
       "----------------------------------------------------------------------------------------------------\n",
       "\n"
@@ -233,7 +245,8 @@
     "        num_reupload=1,\n",
     "        ctrl_enc=encoding_func,\n",
     "        qdevice=\"default.qubit\",\n",
-    "        qbackend=backend\n",
+    "        qbackend=backend,\n",
+    "        aggregation=\"SUM\",\n",
     "    )\n",
     "\n",
     "def circuit_0(backend):\n",
@@ -249,7 +262,8 @@
     "        num_reupload=1,\n",
     "        ctrl_enc=encoding_func,\n",
     "        qdevice=\"default.qubit\",\n",
-    "        qbackend=backend\n",
+    "        qbackend=backend,\n",
+    "        aggregation=\"SUM\",\n",
     "    )\n",
     "\n",
     "for rnd_seed in range(3):\n",
