--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -1030,7 +1030,7 @@
    "outputs": [],
    "source": [
     "# Uncomment the model you want to train.\n",
-    "for data_config, rnd_seed in product(data_config_list, range(1)):\n",
+    "for rnd_seed, data_config in product(range(2), data_config_list):\n",
     "    general_config[\"rnd_seed\"] = rnd_seed\n",
     "    \n",
     "    # # Classical MPGNN with hidden neurons {3, 6, 9} and 2 layers.\n",
