20240115 Add check training exists for wandb in `g_main.ipynb`

--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -646,7 +646,19 @@
     "    logger_config[\"id\"] = logger_config[\"name\"]\n",
     "    logger_config[\"save_dir\"] = general_config[\"result_dir\"]\n",
     "    if use_wandb:\n",
-    "        logger = module_training.wandb_monitor(model, logger_config, general_config, model_config, data_config)\n",
+    "        try:\n",
+    "            account = general_config[\"wandb_account\"]\n",
+    "            project = general_config[\"wandb_project\"]\n",
+    "            run_id = logger_config[\"id\"]\n",
+    "            run = api.run(f\"{account}/{project}/{run_id}\")\n",
+    "            if run.summary[\"epoch\"] == general_config[\"max_epochs\"]:\n",
+    "                _log(f\"{run_id} has been successfully trained, ignored.\\n\")\n",
+    "                return run_id, run.summary\n",
+    "        except ValueError:\n",
+    "            _log(f\"{run_id} does not exist, start training now.\")\n",
+    "        except:\n",
+    "            _log(f\"{run_id} exists but not trained successfully, retraining now.\")\n",
+    "        logger = module_training.wandb_monitor(model, logger_config, general_config, model_config, data_config)   \n",
     "    else:\n",
     "        logger = module_training.default_monitor(logger_config, general_config, model_config, data_config)\n",
     "\n",
@@ -726,9 +738,9 @@
     "        wandb.finish()\n",
     "\n",
     "    # Summary of training results.\n",
-    "    train_summary.update({\"data_mode\":\"train\"})\n",
-    "    test_summary.update({\"data_mode\":\"test\"})\n",
-    "    for _summary in [train_summary,test_summary]:\n",
+    "    train_summary.update({\"data_mode\": \"train\"})\n",
+    "    test_summary.update({\"data_mode\": \"test\"})\n",
+    "    for _summary in [train_summary, test_summary]:\n",
     "        _summary.update(general_config)\n",
     "        _summary.update(data_config)\n",
     "        _summary.update(model_config)\n",
@@ -1030,7 +1042,7 @@
    "outputs": [],
    "source": [
     "# Uncomment the model you want to train.\n",
-    "for rnd_seed, data_config in product(range(2), data_config_list):\n",
+    "for rnd_seed, data_config in product(range(1), data_config_list):\n",
     "    general_config[\"rnd_seed\"] = rnd_seed\n",
     "    \n",
     "    # # Classical MPGNN with hidden neurons {3, 6, 9} and 2 layers.\n",
@@ -1042,7 +1054,14 @@
     "\n",
     "    # # Quantum QCGNN with NR qubits = reuploads = {3, 6, 9}.\n",
     "    # for q in [3, 6, 9]:\n",
-    "    #     execute_quantum(general_config, data_config, qnn=q, gl=1, gr=q, lr=1E-3, mode=\"train\")"
+    "    #     execute_quantum(general_config, data_config, qnn=q, gl=1, gr=q, lr=1E-3, mode=\"train\")\n",
+    "\n",
+    "    # for q, aggr in product([2, 4, 6], [\"SUM\", \"MEAN\"]):\n",
+    "    #     general_config[\"aggregation\"] = aggr\n",
+    "    #     execute_quantum(general_config, data_config, qnn=q, gl=1, gr=1, lr=1E-3, mode=\"train\")\n",
+    "    #     execute_quantum(general_config, data_config, qnn=q, gl=1, gr=q, lr=1E-3, mode=\"train\")\n",
+    "    #     execute_quantum(general_config, data_config, qnn=q, gl=q, gr=1, lr=1E-3, mode=\"train\")\n",
+    "    #     execute_quantum(general_config, data_config, qnn=q, gl=(q//2), gr=(q//2), lr=1E-3, mode=\"train\")"
    ]
   },
   {
