--- a/wandb_api.ipynb
+++ b/wandb_api.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,9 +24,9 @@
     "\n",
     "api     = wandb.Api()\n",
     "date    = \"\"\n",
-    "suffix  = \"20240110\"\n",
+    "suffix  = \"\"\n",
     "project = \"g_var\"\n",
-    "state   = \"failed\"\n",
+    "state   = \"\"\n",
     "\n",
     "for run in api.runs(f\"ntuyianchen/{project}\"):\n",
     "    # if date in run.id and suffix in run.id:\n",
