20240116 Use individual `ctime` for each training

--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -627,6 +627,7 @@
     "    L.seed_everything(general_config[\"rnd_seed\"])\n",
     "\n",
     "    # Record the total training time.\n",
+    "    general_config[\"ctime\"] = time.strftime(\"%Y%m%d_%H%M%S\", time.localtime())\n",
     "    time_start = time.time()\n",
     "\n",
     "    # Use suffix for the training if needed.\n",
@@ -1042,26 +1043,19 @@
    "outputs": [],
    "source": [
     "# Uncomment the model you want to train.\n",
-    "for rnd_seed, data_config in product(range(1), data_config_list):\n",
+    "for rnd_seed, data_config in product(range(3), data_config_list):\n",
     "    general_config[\"rnd_seed\"] = rnd_seed\n",
     "    \n",
-    "    # # Classical MPGNN with hidden neurons {3, 6, 9} and 2 layers.\n",
-    "    # for g_dim in [3,6,9]:\n",
+    "    # # Classical MPGNN with hidden neurons {3, 5, 7} and 2 layers.\n",
+    "    # for g_dim in [3, 5, 7]:\n",
     "    #     execute_classical(general_config, data_config, go=g_dim, gh=g_dim, gl=2, lr=1E-3, mode=\"train\")\n",
     "\n",
     "    # # Best classical MPGNN with hidden neurons 1024 and 4 layers.\n",
     "    # execute_classical(general_config, data_config, go=1024, gh=1024, gl=4, lr=1E-3, mode=\"train\")\n",
     "\n",
-    "    # # Quantum QCGNN with NR qubits = reuploads = {3, 6, 9}.\n",
-    "    # for q in [3, 6, 9]:\n",
-    "    #     execute_quantum(general_config, data_config, qnn=q, gl=1, gr=q, lr=1E-3, mode=\"train\")\n",
-    "\n",
-    "    # for q, aggr in product([2, 4, 6], [\"SUM\", \"MEAN\"]):\n",
-    "    #     general_config[\"aggregation\"] = aggr\n",
-    "    #     execute_quantum(general_config, data_config, qnn=q, gl=1, gr=1, lr=1E-3, mode=\"train\")\n",
-    "    #     execute_quantum(general_config, data_config, qnn=q, gl=1, gr=q, lr=1E-3, mode=\"train\")\n",
-    "    #     execute_quantum(general_config, data_config, qnn=q, gl=q, gr=1, lr=1E-3, mode=\"train\")\n",
-    "    #     execute_quantum(general_config, data_config, qnn=q, gl=(q//2), gr=(q//2), lr=1E-3, mode=\"train\")"
+    "    # # Quantum QCGNN with NR qubits = reuploads = {3, 5, 7}.\n",
+    "    # for q in [3, 5, 7]:\n",
+    "    #     execute_quantum(general_config, data_config, qnn=q, gl=1, gr=q, lr=1E-3, mode=\"train\")"
    ]
   },
   {
@@ -1093,7 +1087,7 @@
     "    general_config[\"rnd_seed\"] = rnd_seed\n",
     "\n",
     "    # # Prediction for classical MPGNN.\n",
-    "    # for gnn_dim in [3,6,9]:\n",
+    "    # for gnn_dim in [3, 5, 7]:\n",
     "    #     # Get summary of prediction result.\n",
     "    #     _, summary = execute_classical(\n",
     "    #         general_config, data_config, go=gnn_dim, gh=gnn_dim, gl=2, lr=1E-3, mode=\"predict\")\n",
@@ -1111,7 +1105,7 @@
     "    # b_df.to_csv(os.path.join(pred_dir, csv_file), index=False)\n",
     "\n",
     "    # # Prediction for quantum QCGNN.\n",
-    "    # for qnn_dim in [3,6,9]:\n",
+    "    # for qnn_dim in [3, 5, 7]:\n",
     "    #     # Get summary of prediction result.\n",
     "    #     _, summary = execute_quantum(\n",
     "    #         general_config, data_config, qnn=qnn_dim, gl=1, gr=qnn_dim, lr=1E-3, mode=\"predict\")\n",
