20240124 Train with variable size of particles

--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -556,9 +556,17 @@
     "    sig_fatjet_events = fatjet_events(data_config[\"sig\"])\n",
     "    bkg_fatjet_events = fatjet_events(data_config[\"bkg\"])\n",
     "    sig_events = sig_fatjet_events.generate_uniform_pt_events(\n",
-    "        bin=data_config[\"bin\"], num_bin_data=data_config[\"num_bin_data\"])\n",
+    "        bin=data_config[\"bin\"],\n",
+    "        num_bin_data=data_config[\"num_bin_data\"],\n",
+    "        num_ptcs_range=data_config[\"num_ptcs_range\"],\n",
+    "        print_log=data_config[\"print_log\"],\n",
+    "    )\n",
     "    bkg_events = bkg_fatjet_events.generate_uniform_pt_events(\n",
-    "        bin=data_config[\"bin\"], num_bin_data=data_config[\"num_bin_data\"])\n",
+    "        bin=data_config[\"bin\"],\n",
+    "        num_bin_data=data_config[\"num_bin_data\"],\n",
+    "        num_ptcs_range=data_config[\"num_ptcs_range\"],\n",
+    "        print_log=data_config[\"print_log\"],\n",
+    "    )\n",
     "\n",
     "    return module_data.JetDataModule(\n",
     "        sig_events=sig_events,\n",
@@ -709,18 +717,12 @@
     "        )[0] # The output is like [summary_object], so use [0] to get the item.\n",
     "    elif mode == \"predict\":\n",
     "        # The ckpt key helped for finding correct checkpoints file.\n",
-    "        data_suffix = (\n",
-    "            f\"{data_config['abbrev']}_\"\n",
-    "            f\"cut({data_config['cut_pt'][0]},{data_config['cut_pt'][1]})\"\n",
-    "        )\n",
-    "        model_name = model_config['model_name']\n",
-    "        model_suffix = model_config['model_suffix']\n",
-    "        ckpt_key = f\"{model_name}_{model_suffix}-{data_suffix}\"\n",
+    "        ckpt_key = model_config[\"group_rnd\"]\n",
     "        # Train 8 particles only, and use the parameters to test other number \n",
     "        # of particles.\n",
     "        if model_config['model_name'] == QuantumRotQCGNN.__name__:\n",
     "            gnn_idx_qubits = model_config['gnn_idx_qubits']\n",
-    "            ckpt_key = ckpt_key.replace(f\"qidx{gnn_idx_qubits}\", \"qidx3\")\n",
+    "            ckpt_key = ckpt_key.replace(f\"qidx{gnn_idx_qubits}\", \"qidx4\")\n",
     "        # Get the correct checkpoints file path.\n",
     "        ckpt_path = get_ckpt_path(ckpt_key)\n",
     "        train_summary = trainer.test(\n",
@@ -1000,6 +1002,8 @@
     "        \"num_bin_data\": num_bin_data,\n",
     "        \"max_num_ptcs\": max_num_ptcs,\n",
     "        \"pt_threshold\": pt_threshold,\n",
+    "        \"num_ptcs_range\": None,\n",
+    "        \"print_log\": False,\n",
     "    }\n",
     "    data_config[\"data_suffix\"] = (\n",
     "        f\"{abbrev}_ptc{max_num_ptcs}_thres{pt_threshold}\"\n",
@@ -1043,7 +1047,7 @@
    "outputs": [],
    "source": [
     "# Uncomment the model you want to train.\n",
-    "for rnd_seed, data_config in product(range(3), data_config_list):\n",
+    "for rnd_seed, data_config in product(range(10), data_config_list):\n",
     "    general_config[\"rnd_seed\"] = rnd_seed\n",
     "    \n",
     "    # # Classical MPGNN with hidden neurons {3, 5, 7} and 2 layers.\n",
@@ -1078,31 +1082,33 @@
     "pred_dir = os.path.join(general_config[\"predictions_dir\"], \"ideal_model\")\n",
     "os.makedirs(pred_dir, exist_ok=True)\n",
     "\n",
-    "num_ptcs_range = range(2, 16 + 1, 2)\n",
-    "prediction_tuple = product(range(3), num_ptcs_range, data_config_list)\n",
+    "# num_ptcs_range_list = [(2, 4), (8, 10), (14, 16)]\n",
+    "# prediction_tuple = product(range(1), num_ptcs_range_list, data_config_list)\n",
     "\n",
-    "# Uncomment the model you want to predict.\n",
-    "for rnd_seed, max_num_ptcs, data_config in prediction_tuple:\n",
-    "    data_config[\"max_num_ptcs\"] = max_num_ptcs\n",
-    "    general_config[\"rnd_seed\"] = rnd_seed\n",
+    "# # Uncomment the model you want to predict.\n",
+    "# for rnd_seed, num_ptcs_range, data_config in prediction_tuple:\n",
+    "#     data_config[\"num_bin_data\"] = None\n",
+    "#     data_config[\"num_ptcs_range\"] = num_ptcs_range\n",
+    "#     data_config[\"print_log\"] = True\n",
+    "#     general_config[\"rnd_seed\"] = rnd_seed\n",
     "\n",
-    "    # # Prediction for classical MPGNN.\n",
-    "    # for gnn_dim in [3, 5, 7]:\n",
-    "    #     # Get summary of prediction result.\n",
-    "    #     _, summary = execute_classical(\n",
-    "    #         general_config, data_config, go=gnn_dim, gh=gnn_dim, gl=2, lr=1E-3, mode=\"predict\")\n",
-    "    #     # Concatenating to prediction buffers.\n",
-    "    #     c_df = pd.concat((c_df, summary))\n",
-    "    # # Saving prediction summary to csv file.\n",
-    "    # csv_file = f\"classical-{general_config['num_bin_data']}_{rnd_seed}.csv\"\n",
-    "    # c_df.to_csv(os.path.join(pred_dir, csv_file), index=False)\n",
+    "#     # Prediction for classical MPGNN.\n",
+    "#     for gnn_dim in [3, 5, 7]:\n",
+    "#         # Get summary of prediction result.\n",
+    "#         _, summary = execute_classical(\n",
+    "#             general_config, data_config, go=gnn_dim, gh=gnn_dim, gl=2, lr=1E-3, mode=\"predict\")\n",
+    "#         # Concatenating to prediction buffers.\n",
+    "#         c_df = pd.concat((c_df, summary))\n",
+    "#     # Saving prediction summary to csv file.\n",
+    "#     csv_file = f\"classical-{general_config['num_bin_data']}_{rnd_seed}.csv\"\n",
+    "#     c_df.to_csv(os.path.join(pred_dir, csv_file), index=False)\n",
     "\n",
-    "    # # Prediction for best classical MPGNN.\n",
-    "    # _, summary = execute_classical(\n",
-    "    #     general_config, data_config, go=1024, gh=1024, gl=4, lr=1E-3, mode=\"predict\")\n",
-    "    # b_df = pd.concat((b_df, summary))\n",
-    "    # csv_file = f\"best_classical-{general_config['num_bin_data']}_{rnd_seed}.csv\"\n",
-    "    # b_df.to_csv(os.path.join(pred_dir, csv_file), index=False)\n",
+    "#     # Prediction for best classical MPGNN.\n",
+    "#     _, summary = execute_classical(\n",
+    "#         general_config, data_config, go=1024, gh=1024, gl=4, lr=1E-3, mode=\"predict\")\n",
+    "#     b_df = pd.concat((b_df, summary))\n",
+    "#     csv_file = f\"best_classical-{general_config['num_bin_data']}_{rnd_seed}.csv\"\n",
+    "#     b_df.to_csv(os.path.join(pred_dir, csv_file), index=False)\n",
     "\n",
     "    # # Prediction for quantum QCGNN.\n",
     "    # for qnn_dim in [3, 5, 7]:\n",
